Harden gateway security and make Java observability config consistent
- add Prometheus Micrometer registry support to CloudApp and Petstore
- switch Java backend images to an entrypoint-based OTEL gate controlled by OTEL_ENABLED
- remove broken compose interpolation for Java agent activation when OTEL_ENABLED=false
- standardize Java services on Actuator-backed Prometheus metrics and disable OTel metrics export
- add structured JSON logging configs for the Java backend services
- make the gateway authoritative for security headers by hiding upstream duplicates
- keep Prometheus and Grafana localhost-bound in the infrastructure stack
- add least-privilege workflow permissions and non-blocking dependency audit checks

--- a/.github/workflows/nightly-ai-integrations.yml
+++ b/.github/workflows/nightly-ai-integrations.yml
@@ -5,6 +5,12 @@ on:
     - cron: "0 2 * * *"
   workflow_dispatch:
 
+# Least-privilege: read-only access to repo contents.
+# If you add steps that comment on PRs or create issues, add the relevant
+# write permission (e.g. pull-requests: write, issues: write).
+permissions:
+  contents: read
+
 concurrency:
   group: nightly-ai-integrations-${{ github.ref }}
   cancel-in-progress: true
