--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -79,6 +79,12 @@ http {
         # Uncomment for production to redirect all HTTP → HTTPS:
         # return 301 https://$host$request_uri;
 
+        # Security headers — inherited by locations that don't use add_header
+        # (health endpoints, static files, root 204).  API locations in
+        # locations.conf include security-headers.conf explicitly because
+        # their own add_header directives override server-level ones.
+        include /etc/nginx/security-headers.conf;
+
         # Health check endpoint (always on port 80 for Docker healthcheck)
         location /nginx_health {
             stub_status on;
@@ -120,8 +126,8 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 1d;
 
-        # HSTS — uncomment for production
-        # add_header Strict-Transport-Security "max-age=63072000" always;
+        # Security headers — inherited by locations that don't use add_header
+        include /etc/nginx/security-headers.conf;
 
         # Health check on HTTPS too
         location /nginx_health {
