Reduce Docker build waste and clean up noisy frontend runtime logging
- expand the root dockerignore to exclude git metadata, caches, build output, logs, and test artifacts
- document lean and showcase run modes in the main README and TESTING guide
- document why the AI monitor Docker build keeps its Rollup native-package fallback
- remove chat happy-path debug logging from the CloudApp shell
- remove noisy success/debug logging from Petstore frontend hooks
- remove session and websocket debug traces from the AI monitor client and streaming UI

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,28 @@
+.git
+.github/cache
+.idea
+.claude
+.DS_Store
+.env
+.env.*
+
 **/node_modules
 **/.next
+**/dist
+**/build
+**/coverage
+**/.pytest_cache
+**/__pycache__
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/*.class
+**/*.log
+**/target
+
+logs
+playwright-report
+test-results
+tmp
+
+review.md
