--- a/backend/cloudapp/src/main/resources/kafka_consumer.properties
+++ b/backend/cloudapp/src/main/resources/kafka_consumer.properties
@@ -1,7 +1,8 @@
 bootstrap.servers=localhost:9092
 group.id=group-chat
-enable.auto.commit=true
-auto.commit.interval.ms=5000
+# Disable auto-commit — use manual acknowledgment per record
+enable.auto.commit=false
+max.poll.records=50
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.json.trusted.packages=com.example.demo.model.persistence.model
