--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.flyway.baseline-on-migrate=true
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
+# RFC 7807 ProblemDetail for standardized error responses
+spring.mvc.problemdetails.enabled=true
