--- a/backend/vehicles-api/src/main/resources/application.properties
+++ b/backend/vehicles-api/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.servlet.context-path=/vehicles
 management.endpoints.web.exposure.include=health,info,prometheus,circuitbreakers,circuitbreakerevents
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
+# RFC 7807 ProblemDetail for standardized error responses
+spring.mvc.problemdetails.enabled=true
 
 # ===========================================================================
 # Resilience4j ? Circuit Breaker Configuration
