--- a/backend/web-proxy/src/main/resources/application.properties
+++ b/backend/web-proxy/src/main/resources/application.properties
@@ -6,3 +6,5 @@ jira.api-token=${JIRA_API_TOKEN:}
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
+# RFC 7807 ProblemDetail for standardized error responses
+spring.mvc.problemdetails.enabled=true
