--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -67,7 +67,7 @@ services:
     restart: unless-stopped
 
   mongo:
-    image: mongo
+    image: mongo:7
     container_name: mongo-chat
     ports:
       - '27018:27017'
@@ -123,6 +123,10 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      # Explicit retention policy
+      KAFKA_LOG_RETENTION_HOURS: 168
+      KAFKA_LOG_RETENTION_BYTES: 1073741824
+      KAFKA_LOG_SEGMENT_BYTES: 104857600
     networks:
       - backend
     healthcheck:
@@ -205,6 +209,7 @@ services:
       - "127.0.0.1:9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus-alerts.yml:/etc/prometheus/alerts/prometheus-alerts.yml:ro
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -279,7 +284,7 @@ services:
       - backend
 
   chromadb:
-    image: chromadb/chroma:latest
+    image: chromadb/chroma:0.6.3
     container_name: chromadb
     restart: unless-stopped
     ports:
