--- a/prometheus.yml
+++ b/prometheus.yml
@@ -10,6 +10,10 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+# Alerting rules — evaluated every evaluation_interval
+rule_files:
+  - /etc/prometheus/alerts/*.yml
+
 scrape_configs:
   # -----------------------------------------------------------------------
   # Spring Boot Actuator metrics (via micrometer-prometheus).
